--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
 <section class="news">
 <div class="news_box">
 <a href="news1200.html" class="news_item">
-<p class="news_hiniti">2025.12.00</p>
+<p class="news_hiniti">202×.××.××</p>
 <p class="news_title">ホームページ開設</p>
 </a>
 <hr>
