--- a/news.html
+++ b/news.html
@@ -36,7 +36,7 @@
 <section class="news">
 <div class="news_box">
 <a href="news1200.html" class="news_item">
-<p class="news_hiniti">202×.××.××</p>
+<p class="news_hiniti">2026.01.04</p>
 <p class="news_title">ホームページ開設</p>
 </a>
 <hr>
