--- a/news1200.html
+++ b/news1200.html
@@ -36,7 +36,7 @@
 <section class="news_syousai">
     <div class="news_syousaibox">
 <h2>ホームページ開設</h2>
-<p class="syousai_hiniti">202×.××.××</p>
+<p class="syousai_hiniti">2026.01.04</p>
 <hr>
 <p class="syoukai_honbun">ホームページ「たまごのへや」を制作しました。</p>
 </div>
